src/ReposSearchPage/ReposSearchPage.module.scss
@import "@styles/variables.scss";

.repo-search-page {
    width: 39.7rem;
    height: 100vh;
    background-color: $background;
    display: grid;
    box-sizing: border-box;
    padding: 2rem;
    grid-template-columns: 29.5rem 5rem;
    grid-template-rows: 5rem max-content;
    gap: 2rem 1.2rem;
    grid-template-areas:
        "search-input button"
        "repo-search-page__container repo-search-page__container";

    &__container {
        grid-area: repo-search-page__container;
        height: calc(100vh - 11rem);
        overflow: scroll;
        overflow-x: hidden;
        display: flex;
        flex-direction: column;
        gap: 1.6rem;
        padding: 0 1rem 0 0;
    }
}

.repo-search-page__search-input {
    grid-area: search-input;
    width: 29.5rem;
    height: 5rem;
    background: $background;
    border: 1px solid $colorBorder;
    box-sizing: border-box;
    border-radius: 6px;
    color: $colorDefault;
    font-weight: normal;
    font-size: 1.4rem;
    padding: 1.2rem;

    &:focus {
        border: 1px solid $accent;
        outline: none;
    }

    &:disabled {
        background-color: $inputDisabled;
        color: $colorHint;
    }

    &::placeholder {
        color: $colorHint;
        font-size: 1.4rem;
    }
}

.repo-search-page__search-button {
    grid-area: search-button;
    width: 5rem;
    height: 5rem;
    border-radius: 6px;
    border: none;
    background-color: $accent;

    &:hover {
        opacity: 0.7;
        cursor: pointer;
    }

    &:disabled {
        background-color: $colorBorder;
    }
}

.repo-search-page__search-button-icon {
    width: 1.75rem;
    height: 1.75rem;
}

.repo-search-page__container {
    &::-webkit-scrollbar {
        width: 0.5rem;
    }

    &::-webkit-scrollbar-track {
        box-shadow: inset 0 0 0.6rem $colorBorder;
        margin-right: 1rem;
        border-radius: 2px;
        width: 0.5rem;
    }

    ::-webkit-scrollbar-thumb {
        background-color: $colorHint;
        border-radius: 2px;
    }
}

